# Unquery

./: LANGUAGE-REFERENCE.adoc  LICENSE  README.md  REFERENCE.adoc  TUTORIAL.adoc  unquery.1
JSONCompare/: CMakeLists.txt  JSONCompare.cpp  JSONgrep.cpp  TraverseJSON.cpp  TraverseJSON.h
libs/rapidjson/: license.txt
libs/shared/: version.h
tests/: tests.sh
tests/expected/: employee_query1.unq  employee_query10.unq  employee_query10a.unq  employee_query11.unq  employee_query12.unq  employee_query12a.unq  employee_query12b.unq  employee_query13.unq  employee_query14.unq  employee_query15.unq  employee_query15a.unq  employee_query15b.unq  employee_query16.unq  employee_query16a.unq  employee_query17.unq  employee_query17a.unq  employee_query17b.unq  employee_query17c.unq  employee_query17d.unq  employee_query18.unq  employee_query19.unq  employee_query2.unq  employee_query20.unq  employee_query20a.unq  employee_query21.unq  employee_query3.unq  employee_query4.unq  employee_query5.unq  employee_query6.unq  employee_query7.unq  employee_query8.unq  employee_query9.unq  employee_tolowerkeys.unq  extra_test1.unq  extra_test2.unq  parsing_aggregatebadcond.unq.errors  parsing_conditions.unq  parsing_functiondefinedtwice.unq.errors  parsing_functionnotdefined.unq.errors  parsing_openbacktick.unq.errors  (+23 more)
tests/extra/: test1.unq  test2.json  (+1 more)
unQLite/: CMakeLists.txt
unq/: CMakeLists.txt
unq/include/: TemplateParser.h  TemplateQuery.h  json-utils.h  utils.h  xcitedb-stubs.h
unq/src/: TemplateParser.cpp  TemplateQuery.cpp  json-utils.cpp  unqlite_main.cpp  utils.cpp
(+107 files in other folders)
